<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.google.android.apps.authenticator.ExportActivity">

    <TextView
        android:id="@+id/export_text"
        android:text="@string/export_key_to_storage"
        android:gravity="center"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/export_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/export_button_text"
        android:layout_below="@+id/export_text"/>

    <Button
        android:id="@+id/import_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/import_button_text"
        android:layout_below="@+id/export_button"/>

</RelativeLayout>
